--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,5 +80,10 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
     implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
 
+    //Coil
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
+
+    //Material3
+    implementation("androidx.compose.material3:material3:1.0.1")
+    implementation("androidx.compose.material3:material3-window-size-class:1.0.1")
 }
