--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,13 @@ dependencies {
     //Material3
     implementation("androidx.compose.material3:material3:1.1.2")
     implementation("androidx.compose.material3:material3-window-size-class:1.1.2")
+
+    //ROOM
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-paging:$room_version"
+
+    //Paging 3.0
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha15'
 }
